--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,7 +52,7 @@
 
     <ul>
       <h3>How to Use</h3>
-      <li id="copy" ><b>URL</b>: <code id="myInput" >http://localhost:5000/api/sendMail/email</code> <img style="width: 24px; height: 24px;" src="copy.svg" alt="copy"> </li>
+      <li id="copy" ><b>URL</b>: <code id="myInput" >https://chilesmailer.vercel.app/api/sendMail/email</code> <img style="width: 24px; height: 24px;" src="copy.svg" alt="copy"> </li>
       <li>Request type: <b>post</b></li>
       <li>
         Provide the following Data: <br />
