--- a/views/index.ejs
+++ b/views/index.ejs
@@ -65,7 +65,7 @@
           </li>
         </ul>
       </li>
-      <li>Use can use the image below as a guide</li>
+      <li>You can use the image below as a guide</li>
     </ul>
     <img loading="lazy" src="mailer.jpg" alt="sample" />
 
