--- a/views/index.ejs
+++ b/views/index.ejs
@@ -65,6 +65,7 @@
           </li>
         </ul>
       </li>
+      <li>Check your spam emails to see received emails from Chile's Mailer. Mark not as spam to receil emails normally</li>
       <li>You can use the image below as a guide</li>
     </ul>
     <img loading="lazy" src="mailer.jpg" alt="sample" />
